# ntools

./: .commit-message  .flake8  .gitignore  .gitmodules  .installed_NTools.Scripts.psm1.txt  .pre-commit-config.yaml  404.html  CHANGELOG.md  HISTORY.md  LICENSE.txt  Launcher.cs  Parameters.cs  README.md  Result.cs  ResultHelper.cs  ResultHelperEx.cs  TAG.TXT  changed_files.txt  check-all-files.ps1  dev-ops.sln  docs-requirements.txt  e2e-tests.targets  git-tools-pbi.md  github-issue-draft.md  index.html  install.bat  install.ps1  junk.txt  launcher.csproj  launcher.sln  mkdocs.yml  nbuild.bat  nbuild.targets  ntools.sln  pbi-phase-1-infra-automation.md  pr-message.md  prebuild.bat  publish-all-projects.ps1  publish-local.ps1  search.html  (+5 more)
.github/: copilot-instructions.md
ApiVersions/: ApiVersions.csproj  AzureDevOpsApiVersions.cs
ColorTest/: Program.cs
DevSetup/: Ntools.md  app-Dotnet_Runtime.json  app-Git_for_Windows.json  app-Ntools.json  app-Powershell.json  app-Sysinternals.json  app-Visual_Studio_Code.json  app-azure-cli.json  app-docker.json  app-go.json  app-nuget.json  app-python.json  app-terraform.json  app-tflint.json  build-apps.go  calc-file-hash.ps1  install-ntools.ps1  install.ps1  install.psm1  list-file-version.ps1  sign-trust.ps1  sign.ps1
GitHubRelease/: ApiService.cs  Cli.cs  Command.cs  CommitService.cs  Constants.cs  ContributorService.cs  Credentials.cs  GitHubAuthService.cs  GitHubHelper.cs  GitHubRelease.csproj  GitHubRelease.sln  JsonContext.cs  Program.cs  Release.cs  ReleaseFormatter.cs  ReleaseService.cs
GitHubReleaseTests/: CliTests.cs  CommitServiceTests.cs  ContributorServiceTests.cs  CredentialsTests.cs  GitHubAuthServiceTests.cs  GitHubReleaseTests.csproj  GitHubSetup.cs  ReleaseFormatterTests.cs  ReleaseServiceTests.cs
LauncherTest/: LaunchRobocopyTest.cs  Program.cs
LauncherTests/: LauncherTests.cs  ResultHelperExTests.cs  ResultHelperTests.cs  launcherTests.csproj
Nbackup/: README.md
Nbuild/: AssemblyInformation.cs  BuildStarter.cs  Cli.cs  CliValidation.cs  Command.cs  ConsoleHelper.cs  GitCommands.cs  IReleaseService.cs  Nbuild - Backup.csproj  Nbuild.csproj  NbuildApp.cs  NbuildApps.cs  Nversion.cs  Program.cs  README.md  ReleaseCommands.cs  ReleaseServiceAdapter.cs  ResourceHelper.cs
NbuildTasks/: ColorMessage.cs  DownloadFile.cs  Enums.cs  ErrorHelper.cs  FileMappins.cs  FileVersion.cs  Git.cs  GitWrapper.cs  NbuildTasks.csproj  NtoolsEnvironmentVariables.cs  Nversion.cs  Pwsh.cs  README.md  RedError.cs  ResourcesHelper.cs  Unzip.cs  UpdateVersionsInDocs.cs  WebDownload.cs  Zip.cs  debug-resources.cs
NbuildTasksTests/: DebugResourcesTests.cs  DownloadFileTests.cs  GenerateCommitMessageTests.cs  GitWrapperTests.cs  NbuildTasksTests.csproj  SetupPreCommitHooksTests.cs  TestFirst.cs  (+1 more)
atools/: CHANGELOG.md  README.md  SDO_INSTALL_README.md  add-issue.py  index.html  install-ntools.py  install-sdo.py  install_sdo.py  issue-gh-example.md  pyproject.toml  requirements-dev.txt  requirements.txt  sdo.cmd  sdo.py  setup.py
atools/add-issue/: index.html
atools/azdo_payloads/: index.html
atools/install-ntools/: index.html
atools/issue-azdo-bug-example/: index.html
atools/issue-azdo-epic-example/: index.html
atools/issue-azdo-pbi-example/: index.html
atools/issue-azdo-task-example/: index.html
atools/issue-gh-example/: index.html
atools/mapping/: index.html
atools/sdo/: index.html
atools/sdo-installation/: index.html
atools/sdo-net/: index.html
atools/sdo_package/: __init__.py  cli.py  client.py  exceptions.py  mapping.md  pipelines.py  pull_requests.py  repositories.py  version.py  work_items.py
atools/sdo_package/parsers/: __init__.py  markdown_parser.py  metadata_parser.py
atools/tests/: run_sdo_tests.py  test_add_issue_file_only.py  test_azdo_platform.py  test_cli_comprehensive.py  test_cli_comprehensive.py.bak  test_client.py  test_client_comprehensive.py  test_create_github_non_dry_run.py  test_error_paths.py  test_github_platform.py  test_install_ntools.py  test_install_sdo.py  test_markdown_parser.py  test_pipelines.py  test_pull_requests.py  test_query_github_gh_cli.py  test_repositories.py  test_sdo.py  test_sdo_cli.py  test_sdo_workitems.py
(+453 files in other folders)
