[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdo"
dynamic = ["version"]
description = "Simple DevOps CLI tool for Azure DevOps work item management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "naz-hage", email = "naz-hage@example.com"},
]
maintainers = [
    {name = "naz-hage", email = "naz-hage@example.com"},
]
keywords = ["azure", "devops", "cli", "work-items"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/naz-hage/ntools"
Repository = "https://github.com/naz-hage/ntools"
Issues = "https://github.com/naz-hage/ntools/issues"

[project.scripts]
sdo = "sdo_package.cli:cli"

[tool.setuptools]
packages = ["sdo_package"]

[tool.setuptools.dynamic]
version = {file = "sdo_package/version.py"}